# ai-agent-framework

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: AGENTS_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  TOOLS_GUIDE.md
examples/: code_assistant.py  data_analyst.py  research_assistant.py
src/: __init__.py
src/agents/: __init__.py  base.py  coder.py  planner.py  react.py  researcher.py  reviewer.py
src/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py  websocket.py
src/config/: settings.py
src/llm/: __init__.py  function_calling.py  provider.py
src/memory/: __init__.py  base.py  composite.py  conversation.py  summary.py  vector_memory.py
src/orchestration/: __init__.py  pipeline.py  router.py  supervisor.py
src/tools/: __init__.py  api_caller.py  base.py  calculator.py  code_executor.py  file_ops.py  registry.py  text_tools.py  web_search.py
src/utils/: __init__.py  logger.py  sandbox.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_websocket.py
tests/unit/: test_function_calling.py  test_memory.py  test_orchestration.py  test_provider.py  test_react_agent.py  test_registry.py  test_sandbox.py  test_schemas.py  test_specialized_agents.py  test_tools.py
